[project]
name = "dreamwalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "networkx>=3.5",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "obonet>=1.1.1",
    "pandas>=2.3.3",
    "parmap>=1.7.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]
